style(修改了文档的格式)

--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=DFRobot_FRN20
-version=1.0.1
+version=1.0.0
 author=DFRobot
-maintainer=fary<feng.yang@dfrobot.com>
+maintainer=PLELES<PLELES@dfrobot.com>
 sentence=Easy to use FRN20 flow sensor.
 paragraph=Water flow measurement sensor that can obtain flow rate, mass flow and other parameters.
 category=Sensors
